--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,24 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<name>telosys-tools-generator-engine</name>
-	<artifactId>telosys-tools-generator-engine</artifactId>
-	
-	<packaging>jar</packaging>
 
     <parent>
-        <groupId>org.telosys.tools</groupId>
+        <groupId>org.telosys</groupId>
         <artifactId>telosys-tools-parent</artifactId>
         <version>3.0.0</version>
         <relativePath>../telosys-tools-parent/pom.xml</relativePath>
     </parent>
 
+	<name>telosys-tools-generator-engine</name>
+	<artifactId>telosys-tools-generator-engine</artifactId>
+	
+	<packaging>jar</packaging>
+
 	<dependencies>
 		
 		<!-- for compilation -->
 		<dependency>
-			<groupId>org.telosys.tools</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>telosys-tools-commons</artifactId>
             <version>${project.parent.version}</version>
 		</dependency>
